potential fix for crash in nsImapFlagAndUidState::ExpungeByIndex, r=neil, bug 664790